<resources>
    <string name="app_name">Instagram</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_your_password">Input your password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="fill_the_field">Fill the field</string>
    <string name="password_not_match">Passwords do not match each other</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_a_mainFragment">This is a MainFragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_a_new_post">Add a new Post</string>
    <string name="favorite">Favorites</string>
    <string name="profile">Profile</string>
    <string name="gmail">koshkinbayevn@gmail.com</string>
    <string name="posts">Публикации</string>
    <string name="_1">1</string>
    <string name="_155">155</string>
    <string name="followers">Подписчики</string>
    <string name="_251">251</string>
    <string name="following">Подписки</string>
    <string name="nurlibay_koshkinbaev">Nurlibay Koshkinbaev</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="edit_profile_image">Изменить фото профиля</string>
    <string name="tvName">Имя</string>
    <string name="tvUserName">Имя пользователя</string>
    <string name="write_a_interesting_story">Write a interesting story</string>
    <string name="send_a_post">Send a post</string>
    <string name="post_theme">Post theme</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="likes">Нравится</string>
</resources>