<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home"
        />

    <item android:id="@+id/searchFragment"
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/search"
        />

    <item android:id="@+id/addPostFragment"
        android:icon="@drawable/ic_outline_add_box_24"
        android:title="@string/add_a_new_post"
        />

    <item android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"
        />

    <item android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile"
        />

</menu>