<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/gmail"
            android:textSize="@dimen/text_size_toolbar"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

    </Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="86dp"
        android:layout_height="86dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/avatar"
        />

    <LinearLayout
        android:id="@+id/llPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:layout_marginStart="@dimen/margin_standard"
        app:layout_constraintEnd_toStartOf="@id/llFollowers"
        android:layout_marginEnd="@dimen/margin_extra_small"
        >

        <TextView
            android:id="@+id/tvPostCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="0"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvPostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:ellipsize="end"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFollowers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/llPost"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/llFollowing"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:layout_marginEnd="@dimen/margin_extra_small"
        >

        <TextView
            android:id="@+id/tvFollowersCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="0"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvFollowersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFollowing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/llFollowers"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_extra_small"
        >

        <TextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="0"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvFollowingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textSize="15sp"
            android:ellipsize="end"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/nurlibay_koshkinbaev"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        />

    <TextView
        android:id="@+id/tvBiography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="08.05.2000\nKarakalpakstan  Nukus\nTUIT Nukus branch \nJunior Android developer"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_standard"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBiography" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        app:spanCount="3"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:orientation="vertical"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>